// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: BasicButton/disabled 1`] = `
.c0 {
  background-color: #333;
  border-radius: 4px;
  color: #fff;
  font-size: 16px;
  font-weight: bold;
  height: 44px;
  width: 300px;
}

<BasicButton
  disabled={true}
  onClick={[Function]}
  red={false}
  small={false}
  xsmall={false}
>
  <styled.button
    disabled={true}
    onClick={[Function]}
    red={false}
    small={false}
    xsmall={false}
  >
    <button
      className="c0"
      disabled={true}
      onClick={[Function]}
    >
      ボタン
    </button>
  </styled.button>
</BasicButton>
`;

exports[`should match snapshot: BasicButton/nomal 1`] = `
.c0 {
  background-color: #333;
  border-radius: 4px;
  color: #fff;
  font-size: 16px;
  font-weight: bold;
  height: 44px;
  width: 300px;
}

<BasicButton
  disabled={false}
  onClick={[Function]}
  red={false}
  small={false}
  xsmall={false}
>
  <styled.button
    disabled={false}
    onClick={[Function]}
    red={false}
    small={false}
    xsmall={false}
  >
    <button
      className="c0"
      disabled={false}
      onClick={[Function]}
    >
      ボタン
    </button>
  </styled.button>
</BasicButton>
`;

exports[`should match snapshot: BasicButton/red 1`] = `
.c0 {
  background-color: #e60000;
  border-radius: 4px;
  color: #fff;
  font-size: 16px;
  font-weight: bold;
  height: 44px;
  width: 300px;
}

<BasicButton
  disabled={false}
  onClick={[Function]}
  red={true}
  small={false}
  xsmall={false}
>
  <styled.button
    disabled={false}
    onClick={[Function]}
    red={true}
    small={false}
    xsmall={false}
  >
    <button
      className="c0"
      disabled={false}
      onClick={[Function]}
    >
      ボタン
    </button>
  </styled.button>
</BasicButton>
`;

exports[`should match snapshot: BasicButton/small 1`] = `
.c0 {
  background-color: #333;
  border-radius: 4px;
  color: #fff;
  font-size: 16px;
  font-weight: bold;
  height: 44px;
  width: 250px;
}

<BasicButton
  disabled={false}
  onClick={[Function]}
  red={false}
  small={true}
  xsmall={false}
>
  <styled.button
    disabled={false}
    onClick={[Function]}
    red={false}
    small={true}
    xsmall={false}
  >
    <button
      className="c0"
      disabled={false}
      onClick={[Function]}
    >
      ボタン
    </button>
  </styled.button>
</BasicButton>
`;

exports[`should match snapshot: BasicButton/xsmall 1`] = `
.c0 {
  background-color: #333;
  border-radius: 4px;
  color: #fff;
  font-size: 16px;
  font-weight: bold;
  height: 44px;
  width: 150px;
}

<BasicButton
  disabled={false}
  onClick={[Function]}
  red={false}
  small={false}
  xsmall={true}
>
  <styled.button
    disabled={false}
    onClick={[Function]}
    red={false}
    small={false}
    xsmall={true}
  >
    <button
      className="c0"
      disabled={false}
      onClick={[Function]}
    >
      ボタン
    </button>
  </styled.button>
</BasicButton>
`;
